--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,16 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Custom file/path
+config.json
+.env
+db
+models
+element-keys.txt
+output
+Dockerfile-dev
+compose-dev.yaml
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
