--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ future==0.18.3
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
-huggingface-hub==0.13.4
+huggingface-hub @ git+https://github.com/huggingface/huggingface_hub.git@a433410ac37f0efaacb92b09684efa3ae46ed3fd
 humanfriendly==10.0
 hyperframe==6.0.1
 idna==3.4
@@ -46,6 +46,5 @@ tokenizers==0.13.3
 tqdm==4.65.0
 typing_extensions==4.5.0
 unpaddedbase64==2.1.0
-unsync==1.4.0
 urllib3==1.26.15
 yarl==1.8.2
