--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,4 @@
-aiofiles==23.1.0
-aiohttp==3.8.5
-aiohttp-socks==0.7.1
-aiosignal==1.3.1
-async-timeout==4.0.2
-atomicwrites==1.4.1
-attrs==23.1.0
-av==10.0.0
-cachetools==4.2.4
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.2.0
-coloredlogs==15.0.1
-ctranslate2==3.17.0
-faster-whisper==0.7.0
-filelock==3.12.2
-flatbuffers==23.5.26
-frozenlist==1.4.0
-fsspec==2023.6.0
-future==0.18.3
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-huggingface-hub==0.16.4
-humanfriendly==10.0
-hyperframe==6.0.1
-idna==3.4
-jsonschema==4.18.4
-jsonschema-specifications==2023.7.1
-Logbook==1.5.3
-matrix-nio==0.21.2
-mpmath==1.3.0
-multidict==6.0.4
-numpy==1.25.1
-onnxruntime==1.15.1
-packaging==23.1
-peewee==3.16.2
-protobuf==4.23.4
-pycparser==2.21
-pycryptodome==3.18.0
-pyrsistent==0.19.3
-python-olm==3.2.15
-python-socks==2.3.0
-PyYAML==6.0.1
-referencing==0.30.0
-requests==2.31.0
-rpds-py==0.9.2
-sympy==1.12
-tokenizers==0.13.3
-tqdm==4.65.0
-typing_extensions==4.7.1
-unpaddedbase64==2.1.0
-urllib3==2.0.4
-yarl==1.9.2
+aiofiles
+aiohttp
+faster-whisper
+matrix-nio[e2e]
